<?xml version="1.0" encoding="utf-8"?>
<!--
     顶级菜单的布局文件，作为main_frame的左侧菜单区域。
	垂直布局，包括三部分
	1.logo，介绍区
	2.菜单项区
	3.小工具图标区
	对应组件事件注册监听在MainFrameactivity中
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            style="@style/layout_match"
            android:gravity="center"
            android:text="@string/logo_name" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="7"
        android:orientation="vertical" >

        <Button
            android:id="@+id/top_menu_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_button_one" />

        <Button
            android:id="@+id/top_menu_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_button_two" />

        <Button
            android:id="@+id/top_menu_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_button_three" />

        <Button
            android:id="@+id/top_menu_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_button_four" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="2"
        android:orientation="vertical" >
<!--
        <ImageView
            android:id="@+id/top_menu_refresh_iv"
            style="@style/layout_match"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/refresh" />

        <ImageView
            android:id="@+id/top_menu_setup_iv"
            style="@style/layout_match"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/set_up" />
-->
    </LinearLayout>

</LinearLayout>